--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,8 +15,9 @@ header {
     color: white;
 }
 
-img {
-    width: 100%;
+figure .avatar {
+    width: 200px;
+
 }
 
 .line {
@@ -25,4 +26,17 @@ img {
     background-color: white;
     margin-inline: 10px;
     border-radius: 8px;
+}
+
+.line-1 {
+    height: 4px;
+    width: 20%;
+    background-color: #2c3e50;
+    margin-inline: 10px;
+    border-radius: 8px;
+}
+
+figure .portfolio {
+    width: 300px;
+    border-radius: 20px;
 }
