--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,3 +47,54 @@ figure .portfolio {
     height: 40px;
     border-radius: 10px;
 }
+
+p {
+    color: #2c3e50;
+}
+
+.line-message {
+    margin-top: 150px;
+}
+
+.send {
+    background-color: #1abc9c;
+    width: 80px;
+    height: 40px;
+    color: white;
+    border-radius: 10px;
+    line-height: 35px;
+}
+
+.gray {
+    background-color: #3a546d;
+    color: white;
+}
+
+.social .fa-brands{
+    border: 1px solid white;
+    border-radius: 40px;
+    height: 50px;
+    line-height: 50px;
+}
+
+.green-1 {
+    color: #1abc9c;
+}
+
+footer {
+    background-color: #2c3e50;
+    color: white;
+}
+
+
+@media screen and (max-width: 768px) {
+    .download-1 {
+        margin-left: -40px;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .download-1 {
+        margin-left: -60px;
+    }
+}
