--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,10 +4,17 @@
     box-sizing: border-box;
 }
 
-header {
-    background-color: #2c3e50;
-    color: white;
-    height: 10vh;
+:root {
+    --color1: #2c3e50;
+}
+
+.bg-nav {
+    background-color: var(--color1);
+}
+
+button.navbar-toggler {
+    filter: invert(1);
+    border: 1px solid black;
 }
 
 .green {
